<resources>
    <string name="app_name">佛山易购</string>
    <string name="hint_username">请输入手机号码</string>
    <string name="hint_password">请输入密码</string>


    <string name="index">首页</string>
    <string name="community">社区</string>
    <string name="shopping">购物车</string>
    <string name="person">我</string>
    <string name="cheap_shop">大聚惠</string>
    <string name="foreign_shop">海外购</string>
    <string name="supermarket_shop">超市百货</string>
    <string name="factory_shop">厂家直销</string>
    <string name="food_shop">美食娱乐</string>
    <string name="advice_product">精品促销</string>
    <string name="advice_shop">商城商户</string>
    <string name="quit_toast">再按一次退出商城</string>
    <string name="one_yuan_buy">一元抢购</string>
    <string name="nine_yuan_buy">九元九专场</string>
    <string name="start_up_buy">开业大聚惠</string>


    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>


    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_login_username">请输入手机号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="find_psw">找回密码</string>
    <string name="other_login">第三方登录</string>
    <string name="login_ing_tip">正在登录</string>
    <string name="send_sms">获取验证码</string>
    <string name="send_sms_again">重新发送</string>
    <string name="send_sms_tip">已给你的手机号%1$s发送短信验证码</string>
    <string name="get_sms_failed">获取短信验证码失败</string>
    <string name="register_failed">注册失败</string>
    <string name="enter_sms">请输入短信验证码</string>
    <string name="enter_psw">请设置密码</string>
    <string name="enter_old_psw">请输入旧密码</string>
    <string name="old_psw">当前密码</string>
    <string name="enter_new_psw">请输入新密码</string>
    <string name="enter_psw_again">请再次确认密码</string>
    <string name="sure">确定</string>
    <string name="enter_mobile">请输入手机号</string>
    <string name="enter_mobile_error">请输入正确手机号</string>
    <string name="enter_psw_error">两次密码不一致</string>


    <string name="edit">编辑</string>
    <string name="done">完成</string>
    <string name="delete">删除</string>
    <string name="balance">结算</string>
    <string name="delete_shop_tip">删除商品后将不能回复,你确定要删除商品吗?</string>
    <string name="delete_address_tip">删除地址后将不能回复,你确定要删除地址吗?</string>
    <string name="cancel_order_tip">你确定要取消该订单吗?</string>

    <string name="des_start_up">请添加描述</string>

    <string name="share">分享</string>
    <string name="commit">提交</string>
    <string name="commit_success">提交成功</string>
    <string name="success">成功</string>
    <string name="login_success">登录成功</string>
    <string name="register_success">注册成功</string>
    <string name="fail">网络失败</string>
    <string name="all_select">全选</string>
    <string name="amount_money">合计:</string>
    <string name="dialog_default_cancel_title">取消</string>
    <string name="dialog_default_confirm_title">确定</string>
    <string name="my_order">我的订单</string>
    <string name="check_all_order">查看所有订单</string>
    <string name="my_love">我的收藏</string>
    <string name="contact_service">联系客服</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="pay_order">待付款</string>
    <string name="accepting_order">待收货</string>
    <string name="accept_order">已收货</string>
    <string name="cancel_order">已取消</string>
    <string name="cancel_order_btn">取消订单</string>
    <string name="apply_after_order">申请售后</string>
    <string name="check_accept_good">确认收货</string>
    <string name="order_num">订单编号%1$s</string>
    <string name="order_detail">订单详情</string>
    <string name="after_sale_order">售后</string>
    <string name="avatar">头像</string>
    <string name="name">姓名</string>
    <string name="contact_way">联系方式</string>
    <string name="address">收货地址</string>
    <string name="change_address">修改地址</string>
    <string name="add_address">新增地址</string>
    <string name="please_add_address">你还没有地址</string>
    <string name="change_psw">修改登录密码</string>
    <string name="change_name">修改姓名</string>
    <string name="person_info">个人资料</string>
    <string name="logout">退出登录</string>
    <string name="save">保存</string>
    <string name="take_photo">拍照</string>
    <string name="gallery">本地相册</string>
    <string name="pay">立即支付</string>
    <string name="pay_success">支付成功</string>
    <string name="yesterday">昨天</string>
    <!--分享-->
    <string name="share_item_weixin_friend_title">微信好友</string>
    <string name="share_item_weixin_title">微信朋友圈</string>
    <string name="share_item_qq_friend_title">QQ好友</string>
    <string name="share_item_qzone_title">QQ空间</string>
    <string name="share_item_sina_title">新浪微博</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_fail">分享失败</string>
    <string name="call_service">联系客服</string>
    <string name="buy_now">立即购买</string>
    <string name="add_shop">加入购物车</string>
    <string name="choose_detail">选择规格</string>
    <string name="choose_product">选择商品</string>
    <string name="pic_detail">图片详情</string>
    <string name="user_advice">用户评价</string>
    <string name="call">拨打</string>
    <string name="advice">意见反馈</string>
    <string name="my_news">我的消息</string>
    <string name="amount">数量</string>
    <string name="check_order">确认订单</string>
    <string name="contact">联系人</string>
    <string name="delete_address">删除当前地址</string>
    <string name="committing">提交中</string>
    <string name="request">请求中</string>
    <string name="add_cart_success">加入购物车成功</string>
    <string name="input_address">请输入信息</string>
    <string name="collect_good_success">收藏成功</string>
    <string name="delete_success">删除成功</string>
    <string name="collect_good_fail">收藏失败</string>
    <string name="comment_title">评论</string>


    <!-- 工具类 -->
    <string name="index_of_length">%1$s/%2$s</string>
    <string name="save_address">保存地址</string>
    <string name="comment">星级评分</string>
    <string name="category">分类</string>
    <string name="money_has_mark">￥%1$s</string>
    <string name="loading">加载中</string>
    <string name="input_prduct_name">请输入商品名称</string>
</resources>
