<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="36dp"
    android:paddingRight="36dp"
    android:paddingTop="17dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_et_bg"
        android:paddingLeft="@dimen/margin_30p"
        android:paddingRight="@dimen/margin_30p"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_110p">
            <Button
                android:id="@+id/send_again_btn"
                android:textColor="@color/white"
                android:layout_width="71dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/yzm_bg"
                android:singleLine="true"
                android:text="@string/send_sms"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_username"
                style="@style/login_edittext"
                android:layout_alignParentLeft="true"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_24px"
                android:layout_toLeftOf="@+id/send_again_btn"
                android:hint="@string/hint_login_username"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </RelativeLayout>
        <View
            style="@style/horizontal_line"/>
        <EditText
            android:id="@+id/et_sms_code"
            style="@style/login_edittext"
            android:layout_height="@dimen/margin_110p"
            android:hint="@string/enter_sms"
            android:imeOptions="actionDone"
            android:background="@null"
            android:inputType="number" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/register_et_bg"
        android:paddingLeft="@dimen/margin_30p"
        android:paddingRight="@dimen/margin_30p"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_psw"
            style="@style/login_edittext"
            android:layout_height="@dimen/margin_110p"
            android:hint="@string/enter_psw"
            android:imeOptions="actionDone"
            android:background="@null"
            android:inputType="number" />
        <View
            style="@style/horizontal_line"/>
        <EditText
            android:id="@+id/et_psw_check"
            style="@style/login_edittext"
            android:layout_height="@dimen/margin_110p"
            android:hint="@string/enter_psw_again"
            android:imeOptions="actionDone"
            android:background="@null"
            android:inputType="number" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        style="@style/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/single_line_height_132px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_30p"
        android:text="@string/sure"/>
</LinearLayout>