<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/effect_tm_black"
    android:paddingBottom="15dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="19dp"
        android:paddingRight="19dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/register_et_bg"
            android:orientation="vertical">
            <TextView
                android:id="@+id/take_photo"
                android:layout_height="49dp"
                android:layout_width="match_parent"
                android:text="@string/take_photo"
                android:background="@null"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/color_4486d8"
                android:gravity="center"/>
            <View
                style="@style/horizontal_line"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"/>
            <TextView
                android:id="@+id/take_gallery"
                android:layout_height="49dp"
                android:layout_width="match_parent"
                android:text="@string/gallery"
                android:background="@null"
                android:textSize="@dimen/textsize_16sp"
                android:textColor="@color/color_4486d8"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/btn_cancel"
            android:layout_height="49dp"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_default_cancel_title"
            android:background="@drawable/register_et_bg"
            android:textSize="@dimen/textsize_16sp"
            android:textColor="@color/color_ed394a"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>