<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_layout"
        style="@style/titlebar">

        <!--<ViewStub-->
        <!--android:id="@+id/viewstub_back_btn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_marginLeft="@dimen/margin_24px"-->
        <!--android:layout="@layout/stub_back_btn" />-->

        <TextView
            android:id="@+id/tv_title"
            style="@style/title_textView" />

        <ImageView
            android:id="@+id/news_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:padding="10dp"
            android:src="@mipmap/load_img_loading" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/activity_bg_gray"/>


    <com.gjj.shop.widget.NestRadioGroup
        android:id="@+id/group_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/index_tab"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/selector_tab_index"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/index" />

        <RadioButton
            android:id="@+id/community_tab"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/selector_tab_feed"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/community" />


        <FrameLayout
            android:id="@+id/personal_fl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/shopping_tab"
                style="@style/main_Red_RadioButton_style"
                android:drawableTop="@drawable/selector_tab_personal"
                android:paddingBottom="3dp"
                android:text="@string/shopping" />

            <ImageView
                android:id="@+id/redTip"
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="12dp"
                android:background="@mipmap/all_img_dot_pr"
                android:visibility="gone" />
        </FrameLayout>

        <RadioButton
            android:id="@+id/person_tab"
            style="@style/main_RadioButton_style"
            android:drawableTop="@drawable/selector_tab_im"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/person" />
    </com.gjj.shop.widget.NestRadioGroup>

</LinearLayout>